# cort-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/cort_mcp/: recursive_thinking_ai.py  server.py
